--- a/edd.ca.gov/empwages/meta/headers.yaml
+++ b/edd.ca.gov/empwages/meta/headers.yaml
@@ -16,6 +16,10 @@ May 2005 Employment Estimates: emp_est
 May 2006 Employment Estimates: emp_est
 May 2007 Employment Estimates: emp_est
 May 2008 Employment Estimates: emp_est
+May 2009 Employment Estimates: emp_est
+May 2010 Employment Estimates: emp_est
+May 2011 Employment Estimates: emp_est
+May 2012 Employment Estimates: emp_est
 Mean Annual Wage: annual_mean
 Mean Hourly Wage: hourly_mean
 Mean Relative Standard Error (1): mean_rse
