--- a/ffiec.gov/cra_disclosures/meta/field_map.yaml
+++ b/ffiec.gov/cra_disclosures/meta/field_map.yaml
@@ -20,10 +20,10 @@ Number of Loans Originated to Small Businesses with Gross Annual Revenues < $1 m
 Number of Loans Originated to Small Businesses with Gross Annual Revenues < $1 million (Originations & Purchases): 'sb_oloans_lt1m'
 Number of Loans Originated to Small Farms with Gross Annual Revenues < $1 million: 'sf_oloans_lt1m'
 Number of Loans Originated to Small Farms with Gross Annual Revenues < $1 million (Originations & Purchases): 'sf_oloans_lt1m'
-Number of Loans Purchased to Small Businesses with Gross Annual Revenues < $1 million: ''
-Number of Loans Purchased to Small Businesses with Gross Annual Revenues < $1 million (Originations & Purchases): ''
-Number of Loans Purchased to Small Farms with Gross Annual Revenues < $1 million: ''
-Number of Loans Reported as Affiliate Loans: ''
+Number of Loans Purchased to Small Businesses with Gross Annual Revenues < $1 million: 'sb_ploans_lt1m'
+Number of Loans Purchased to Small Businesses with Gross Annual Revenues < $1 million (Originations & Purchases): 'sb_ploans_lt1m'
+Number of Loans Purchased to Small Farms with Gross Annual Revenues < $1 million: 'sf_ploans_lt1m'
+Number of Loans Reported as Affiliate Loans: 'aloans'
 Number of Loans to Small Farms with Gross Annual Revenues < $1 million (Originations & Purchases): ''
 Number of Small Business Loans Originated: ''
 Number of Small Business Loans Originated Reported as Affiliate Loans: ''
