--- a/ffiec.gov/cra_disclosures/meta/build.yaml
+++ b/ffiec.gov/cra_disclosures/meta/build.yaml
@@ -1,7 +1,60 @@
-build: {}
+build:
+    requirements: {}
+    url_template: http://www.ffiec.gov/cra/xls/{:02d}exp_discl.zip
+    years:
+    - 1996
+    - 2013
 dependencies: {}
 extract: {}
 sources:
-    example:
-        description: description
-        url: http://example.com
+    1996:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/96exp_discl.zip
+    1997:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/97exp_discl.zip
+    1998:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/98exp_discl.zip
+    1999:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/99exp_discl.zip
+    2000:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/00exp_discl.zip
+    2001:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/01exp_discl.zip
+    2002:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/02exp_discl.zip
+    2003:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/03exp_discl.zip
+    2004:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/04exp_discl.zip
+    2005:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/05exp_discl.zip
+    2006:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/06exp_discl.zip
+    2007:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/07exp_discl.zip
+    2008:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/08exp_discl.zip
+    2009:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/09exp_discl.zip
+    2010:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/10exp_discl.zip
+    2011:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/11exp_discl.zip
+    2012:
+        description: null
+        url: http://www.ffiec.gov/cra/xls/12exp_discl.zip
