--- a/ffiec.gov/cra_disclosures/meta/field_map.yaml
+++ b/ffiec.gov/cra_disclosures/meta/field_map.yaml
@@ -1,19 +1,19 @@
-Action Taken Type: 'action'
-Action Type: 'action'
-Activity Year: 'year'
-Agency Code: 'agency'
-Assessment Area Number: 'assessment_area'
-Census Tract: 'tract'
-County: 'county'
-Filler: 'fillter'
-Income Group: 'income_group'
-Income Group Total: 'income_total'
-Loan Indicator: 'loan_indicator'
-Loan Type: 'loan_type'
-Loan Type .: 'loan_type'
-MA: 'msa'
-MSA: 'msa'
-MSA/MD: 'msa'
+Action Taken Type: action
+Action Type: action
+Activity Year: year
+Agency Code: agency
+Assessment Area Number: assessment_area
+Census Tract: tract
+County: county
+Filler: fillter
+Income Group: income_group
+Income Group Total: income_total
+Loan Indicator: loan_indicator
+Loan Type: loan_type
+Loan Type .: loan_type
+MA: msa
+MSA: msa
+MSA/MD: msa
 Number of Loans: num_loans
 Number of Loans Originated to Small Businesses with Gross Annual Revenues < $1 million: num_orig_bus_lt1m
 Number of Loans Originated to Small Farms with Gross Annual Revenues < $1 million: num_orig_farm_lt1m
@@ -50,13 +50,13 @@ Number of Small Farm Loans Purchased with Loan Amount at Origination > $250,000 
 Number of Small Farm Loans Purchased with Loan Amount at Origination > 100,000 and < $250,000: num_purch_farm_lt250k
 Number of Small Farm Loans Reported as Affiliate Loans: num_farm_al
 Number of Small Farms Loans Originated Reported as Affiliate Loans: num_orig_farm_al
-Partial County Indicator: 'partial_county'
-Population Classification: 'pop_class'
-Report Level: 'report_level'
-Respondent ID: 'respondent_id'
-Split County Indicator: 'split_county'
-State: 'state'
-Table ID: 'table_id'
+Partial County Indicator: partial_county
+Population Classification: pop_class
+Report Level: report_level
+Respondent ID: respondent_id
+Split County Indicator: split_county
+State: state
+Table ID: table_id
 Total Loan Amount Small Business Loans Purchased with Gross Annual Revenues < $1 million: tot_purch_bus_lt1m
 Total Loan Amount of Loans: tot
 Total Loan Amount of Loans Originated to Small Businesses with Gross Annual Revenues < $1 million: tot_orig_bus_lt1m
