First working version

--- a/ffiec.gov/cra_disclosures/meta/field_map.yaml
+++ b/ffiec.gov/cra_disclosures/meta/field_map.yaml
@@ -5,7 +5,7 @@ Agency Code: agency
 Assessment Area Number: assessment_area
 Census Tract: tract
 County: county
-Filler: fillter
+Filler: filler
 Income Group: income_group
 Income Group Total: income_total
 Loan Indicator: loan_indicator
