--- a/211sandiego.org/calls-p1ye2014/meta/build.yaml
+++ b/211sandiego.org/calls-p1ye2014/meta/build.yaml
@@ -1,7 +1,31 @@
-build: {}
+build:
+    requirements:
+        petl: petl
+        xlrd: xlrd
 dependencies: {}
 extract: {}
 sources:
-    example:
-        description: description
-        url: http://example.com
+    airsxmlexport:
+        description: null
+        url: s3://ds.civicknowledge.org/211sandiego.org/211%20San%20Diego%20Calls%20and%20Followups%202014/airsxmlexport.xml
+    calldata:
+        description: null
+        url: s3://ds.civicknowledge.org/211sandiego.org/211%20San%20Diego%20Calls%20and%20Followups%202014/211%20Client%20Call%20Data%20FY%202013-2014.xlsx
+    calldata_ctc:
+        description: null
+        url: s3://ds.civicknowledge.org/211sandiego.org/211%20San%20Diego%20Calls%20and%20Followups%202014/Courage%20to%20Call%20Client%20Call%20Data%20FY%202013-2014.xlsx
+    ctc_survey:
+        description: null
+        url: s3://ds.civicknowledge.org/211sandiego.org/211%20San%20Diego%20Calls%20and%20Followups%202014/Follow-up%20Results%20-%20Courage%20to%20Call%20-%20FY13-14%20Relation%20db.zip
+    genline_survey:
+        description: null
+        url: s3://ds.civicknowledge.org/211sandiego.org/211%20San%20Diego%20Calls%20and%20Followups%202014/Follow-up%20Results%20-%20Gen%20Line%20-%20FY13-14-Relational%20db.zip
+    healthnav_survey:
+        description: null
+        url: s3://ds.civicknowledge.org/211sandiego.org/211%20San%20Diego%20Calls%20and%20Followups%202014/Follow-up%20Results%20-%20Health%20Nav%20-%20FY13-14%20Relation%20db.zip
+    programlist:
+        description: null
+        url: s3://ds.civicknowledge.org/211sandiego.org/211%20San%20Diego%20Calls%20and%20Followups%202014/211%20Agency-Program%20List%20Export.xml.zip
+    programservices:
+        description: null
+        url: s3://ds.civicknowledge.org/211sandiego.org/211%20San%20Diego%20Calls%20and%20Followups%202014/211%20Agency-Program-Svcs%20Data%20Export.xlsx
