--- a/sandiego.gov/businesses/meta/partitions.yaml
+++ b/sandiego.gov/businesses/meta/partitions.yaml
@@ -1,2 +1,6 @@
 -   name: sandiego.gov-businesses-orig-businesses
     table: businesses
+-   name: sandiego.gov-businesses-orig-ck_addresses
+    table: ck_addresses
+-   name: sandiego.gov-businesses-orig-dstk_addresses
+    table: dstk_addresses
