--- a/sandiego.gov/businesses/bundle.yaml
+++ b/sandiego.gov/businesses/bundle.yaml
@@ -35,17 +35,17 @@ identity:
     btime: null
     dataset: businesses
     id: d02R
-    revision: 2
+    revision: 4
     source: sandiego.gov
     subset: null
     type: null
     variation: orig
-    version: 0.0.2
+    version: 1.0.4
 names:
-    fqname: sandiego.gov-businesses-orig-0.0.2~d02R002
+    fqname: sandiego.gov-businesses-orig-1.0.4~d02R004
     name: sandiego.gov-businesses-orig
-    vid: d02R002
-    vname: sandiego.gov-businesses-orig-0.0.2
+    vid: d02R004
+    vname: sandiego.gov-businesses-orig-1.0.4
 process: {}
 versions:
     1:
@@ -55,3 +55,9 @@ versions:
         description: Changed DATEs to DATETIMEs. The values are stored with time parts,
             which DBAPI can not handle.
         version: 0.0.2
+    3:
+        description: Broke out the original data from the CK and DSTK geocoded values.
+        version: 1.0.3
+    4:
+        description: null
+        version: 1.0.4
