--- a/211sandiego.org/calls-p1ye2014-dedupe/bundle.yaml
+++ b/211sandiego.org/calls-p1ye2014-dedupe/bundle.yaml
@@ -3,9 +3,12 @@ about:
     license: null
     rights: null
     subject: null
-    summary: null
+    summary: The 211 call dataset expresses multiple values in a field with multiple
+        records, one for each value in a field, multiplied over all of the multiple
+        values in fields that have multiple values. This bundle collapses those records
+        into one.
     tags: []
-    title: null
+    title: Deduplicated 211 Calls
 contact_bundle:
     creator:
         email: eric@sandiegodata.org
@@ -17,9 +20,9 @@ contact_bundle:
         url: http://www.sandiegodata.org
 contact_source:
     creator:
-        email: null
-        name: null
-        url: null
+        email: eric@sandiegodata.org
+        name: Eric Busboom
+        url: http://sandiegodata.org
     maintainer:
         email: null
         name: null
