--- a/cde.ca.gov/enrollment-1993e/meta/build.yaml
+++ b/cde.ca.gov/enrollment-1993e/meta/build.yaml
@@ -1,5 +1,5 @@
 build: {}
-dependencies: {}
+dependencies:}
 extract: {}
 sources:
     1993:
@@ -89,3 +89,4 @@ sources:
     index:
         description: Web page that links to all of the files.
         url: http://www.cde.ca.gov/ds/sd/sd/filesenr.asp
+
