--- a/sandiego.gov/businesses/meta/build.yaml
+++ b/sandiego.gov/businesses/meta/build.yaml
@@ -2,7 +2,7 @@ build:
     requirements:
         rtree: rtree
         shapely: shapley
-        dstk: dstk
+        dstk: http://www.datasciencetoolkit.org/dstk-0.50.tar.gz
 dependencies:
     addresses: clarinova.com-geocode-casnd-address-1.0.7
     blocks: clarinova.com-places-casnd-blocks-geo
